# Virtual-HIL-Framework

./: .gitignore  CLAUDE.md  GEMINI.md  README.md  pyproject.toml
.github/workflows/: manual-hil-test.yml  nightly-regression.yml  sil-ci.yml  sil-ci.yml.disabled
config/: can_database.dbc  diagnostic_database.json  ecu_config.yaml
docker/: Dockerfile  docker-compose.yml
docs/: architecture.md  ci_setup.md  ecu_specification.md  test_strategy.md
ecu_simulation/: __init__.py  battery_ecu.py  battery_ecu_server.py  can_interface.py  diagnostic_server.py  door_ecu.py  rest_interface.py
libraries/: CANLibrary.py  DiagnosticLibrary.py  ECUSimulatorHTTPLibrary.py  ECUSimulatorLibrary.py  FaultInjectionLibrary.py  __init__.py
resources/: common_keywords.robot  ecu_variables.robot  test_data.robot
scripts/: analyze_logs.py  extract_stats.py  generate_can_trace.py  start_ecu_simulator.py  start_ecu_simulator.sh
tests/functional/: test_battery_http.robot  test_battery_monitoring.robot  test_cell_balancing.robot  test_thermal_management.robot
